detail interface and some styles

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,7 +3,8 @@
 @(items: Seq[CollectionTarget])
 
 @main("Welcome to Play") {
-  <p>This is the collector.
+  <p>This is the collector status (sort of).
+    You are probably more interested in
     <a href="@routes.Application.stats">Stats</a>.
   </p>
 
