add free space display. Fixes #2

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 @(items: Seq[CollectionTarget])
 
-@main("Welcome to Play") {
+@main("Usage: Control Panel") {
   <p>This is the collector status (sort of).
     You are probably more interested in
     <a href="@routes.Application.stats">Stats</a>.
